fix flickering issue with navigation

--- a/src/theme/_se-variable.scss
+++ b/src/theme/_se-variable.scss
@@ -34,7 +34,7 @@ $se-white:                  #FFFFFF !default;
 $success: $se-life-green !default;
 $error: $se-red !default;
 $warning: $se-honeysuckle-orange !default;
-$information: rgba(203, 203, 203, 0.6) !default;
+$information: $se-super-dark-grey !default;
 
 
 // Only the seTheme should be used to change the them of the app
